fixed paragraph alignment

--- a/How it Works/Donovan.css
+++ b/How it Works/Donovan.css
@@ -1,13 +1,14 @@
 html, body{
   height: 100%;
-  margin: 0px
+  margin: 0px;
+  font-family: 'Roboto', sans-serif;
 }
 
-
+/* try vh, vw and try min/max-height/width  */
 
 .container {  
   display: grid;
-  grid-template-columns: 0.8fr 1.4fr 1.4fr 1.4fr 0.8fr;
+  grid-template-columns: 0.8fr 2fr 1.4fr 1.4fr 0.8fr;
   grid-template-rows: 0.3fr 1.3fr 0.6fr 1.3fr 0.6fr 1.3fr 0.9fr;
   gap: 0px 0px;
   grid-auto-flow: row;
@@ -27,6 +28,7 @@ html, body{
   margin-top: 5%;
   margin-bottom: 5%;
   padding-top: 5%;
+  text-align: center;
 
 }
 
@@ -35,6 +37,7 @@ html, body{
   margin-top: 5%;
   margin-bottom: 5%;
   padding-top: 5%;
+  text-align: center;
 }
 
 .Card-1-in-text{
@@ -214,4 +217,8 @@ nav a {
   padding-left: 10%;
   padding-right: 10%;
   margin-bottom: 5%;
+}
+
+#br-1{
+  margin-left: 15px;
 }
